# Todo-BE

./: Cargo.toml  README.md
auth_lib/: Cargo.toml
auth_lib/src/: lib.rs
migrations/: 001_setup.down.sql  001_setup.up.sql
src/: app.rs  auth.rs  logging.rs  main.rs  models.rs
src/handlers/: mod.rs  utils.rs
src/persistence/: mod.rs  tasks_dbo.rs  tracking_dbo.rs  users_dbo.rs
