[package]
name = "todo-app"
version = "0.1.0"
edition = "2021"

[dependencies]
sqlx = { version = "0.7.2", features = [ "runtime-tokio-rustls" , "postgres", "uuid", "time"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
dotenvy = "0.15"
tokio = { version = "1", features = ["full"] }
axum = "0.7.4"
axum-extra = { version = "0.10", features = ["typed-header"] }
headers = "0.4"
async-trait = "0.1"
reqwest = { version = "0.11", features = ["json"] }
auth_lib = { path = "./auth_lib" }
async-graphql = "7"
async-graphql-axum = "7"
